# rust-supabase-example

./: Cargo.toml  README.md
src/: main.rs
