[package]
name = "rust-supabase"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"

